--- a/mandelbulber2/formula/ui/transf_poly_fold_atan.ui
+++ b/mandelbulber2/formula/ui/transf_poly_fold_atan.ui
@@ -62,7 +62,7 @@
     </layout>
    </item>
    <item>
-    <layout class="QGridLayout" name="gridLayout_45" columnstretch="0,0,1">
+    <layout class="QGridLayout" name="gridLayout_45" columnstretch="0,1,1">
      <property name="spacing">
       <number>2</number>
      </property>
@@ -88,6 +88,9 @@
      </item>
      <item row="1" column="2">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledAy_false">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string notr="true">if (z.z &lt; 0.0) z.y= -z.y</string>
        </property>
@@ -108,6 +111,9 @@
      </item>
      <item row="2" column="2">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledAz_false">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string notr="true">if (z.x &lt; 0.0) z.z= -z.z</string>
        </property>
@@ -141,6 +147,9 @@
      </item>
      <item row="1" column="1">
       <widget class="MySpinBox" name="spinboxInt_transf_int8_Y">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -154,6 +163,9 @@
      </item>
      <item row="2" column="1">
       <widget class="MySpinBox" name="spinboxInt_transf_int8_Z">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -701,5 +713,102 @@
   <tabstop>groupCheck_info</tabstop>
  </tabstops>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>checkBox_transf_function_enabledCx</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinboxInt_transf_int8_X</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>6</x>
+     <y>63</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>217</x>
+     <y>71</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledCx</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>checkBox_transf_function_enabledAx_false</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>63</x>
+     <y>59</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>530</x>
+     <y>69</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledCy_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinboxInt_transf_int8_Y</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>33</x>
+     <y>83</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>241</x>
+     <y>90</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledCy_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>checkBox_transf_function_enabledAy_false</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>45</x>
+     <y>87</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>601</x>
+     <y>89</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledCz_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinboxInt_transf_int8_Z</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>8</x>
+     <y>109</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>244</x>
+     <y>124</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledCz_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>checkBox_transf_function_enabledAz_false</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>30</x>
+     <y>115</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>623</x>
+     <y>116</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
