--- a/mandelbulber2/formula/ui/transf_poly_fold_atan2.ui
+++ b/mandelbulber2/formula/ui/transf_poly_fold_atan2.ui
@@ -62,12 +62,15 @@
     </layout>
    </item>
    <item>
-    <layout class="QGridLayout" name="gridLayout_45" columnstretch="0,0,1">
+    <layout class="QGridLayout" name="gridLayout_45" columnstretch="0,1,1">
      <property name="spacing">
       <number>2</number>
      </property>
      <item row="1" column="0">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledCy_false">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="font">
         <font>
          <weight>50</weight>
@@ -88,6 +91,9 @@
      </item>
      <item row="1" column="2">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledAy_false">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string notr="true">if (z.z &lt; 0.0) z.y= -z.y</string>
        </property>
@@ -95,6 +101,9 @@
      </item>
      <item row="2" column="0">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledCz_false">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="font">
         <font>
          <weight>50</weight>
@@ -108,6 +117,9 @@
      </item>
      <item row="2" column="2">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledAz_false">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string notr="true">if (z.x &lt; 0.0) z.z= -z.z</string>
        </property>
@@ -141,6 +153,9 @@
      </item>
      <item row="1" column="1">
       <widget class="MySpinBox" name="spinboxInt_transf_int8_Y">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -154,6 +169,9 @@
      </item>
      <item row="2" column="1">
       <widget class="MySpinBox" name="spinboxInt_transf_int8_Z">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -701,5 +719,102 @@
   <tabstop>groupCheck_info</tabstop>
  </tabstops>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>checkBox_transf_function_enabledCx</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinboxInt_transf_int8_X</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>11</x>
+     <y>62</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>331</x>
+     <y>61</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledCx</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>checkBox_transf_function_enabledAx_false</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>36</x>
+     <y>59</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>545</x>
+     <y>67</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledCy_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinboxInt_transf_int8_Y</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>27</x>
+     <y>87</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>245</x>
+     <y>94</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledCy_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>checkBox_transf_function_enabledAy_false</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>28</x>
+     <y>92</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>594</x>
+     <y>92</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledCz_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinboxInt_transf_int8_Z</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>21</x>
+     <y>113</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>220</x>
+     <y>120</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledCz_false</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>checkBox_transf_function_enabledAz_false</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>37</x>
+     <y>113</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>555</x>
+     <y>122</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
